# camera_calibration_apriltag

./: README.md  mainpage.dox  package.xml  setup.cfg  setup.py
doc/: conf.py  index.rst
launch/: calibrate.launch.py  calibrate_stereo.launch.py  careye_calibrate.launch.py
src/camera_calibration_apriltag/: apriltag_board.py  calibrator.py  camera_calibrator.py  careye_calibrator.py  careye_gui.py  careye_hand_eye.py  careye_viewer3d.py  qt_gui.py  tag_detection.py
src/camera_calibration_apriltag/nodes/: cameracalibrator.py  carcalibrator.py
