<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_calibration_apriltag</name>
  <version>4.0.0</version>
  <description>
     camera_calibration_apriltag calibrates monocular or stereo cameras from
     AprilTag detections published by an external AprilTag detector node, using
     an AprilTag grid (AprilGrid) target. It provides a PySide6 GUI.
  </description>

  <maintainer email="iansun2004@gmail.com">Ian Sun</maintainer>

  <license>BSD</license>
  <url type="repository">https://github.com/ros-perception/image_pipeline</url>
  <author>James Bowman</author>
  <author>Patrick Mihelich</author>

  <depend>apriltag_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>message_filters</depend>
  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>python3-transforms3d</depend>
  <exec_depend>python3-pyside6</exec_depend>
  <exec_depend>apriltag_detector</exec_depend>
  <!-- careye_calibrate.launch.py uses the apriltag_ros detector at runtime. -->
  <exec_depend>apriltag_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
